@@ -12,6 +12,12 @@ Changes with Apache 2.3.15
      PR 51714. [Stefan Fritsch, Jim Jagielski, Ruediger Pluem, Eric Covener,
      <lowprio20 gmail.com>]
 
+  *) mod_log_debug: Rename optional argument from if= to expr=, to be more
+     in line with other config directives. [Stefan Fritsch]
+
+  *) mod_headers: Require an expression to be specified with expr=, to be more
+     in line with other config directives. [Stefan Fritsch]
+
   *) mod_substitute: To prevent overboarding memory usage, limit line length
      to 1MB. [Stefan Fritsch]
 
